WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199815
NSTextFinder holes don't scroll with the page
https://bugs.webkit.org/show_bug.cgi?id=199815
Summary
NSTextFinder holes don't scroll with the page
Tim Horton
Reported
2019-07-15 17:17:59 PDT
NSTextFinder holes don't scroll with the page
Attachments
Patch
(25.81 KB, patch)
2019-07-15 17:46 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(27.87 KB, patch)
2019-07-16 11:29 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(28.73 KB, patch)
2019-07-16 11:33 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(28.60 KB, patch)
2019-07-16 11:45 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-07-15 17:46:46 PDT
Created
attachment 374173
[details]
Patch
Tim Horton
Comment 2
2019-07-15 17:47:06 PDT
<
rdar://problem/52280514
>
Tim Horton
Comment 3
2019-07-15 17:47:29 PDT
I don't love it.
Tim Horton
Comment 4
2019-07-16 11:29:58 PDT
Created
attachment 374224
[details]
Patch
Tim Horton
Comment 5
2019-07-16 11:33:32 PDT
Created
attachment 374225
[details]
Patch
Tim Horton
Comment 6
2019-07-16 11:45:29 PDT
Created
attachment 374227
[details]
Patch
WebKit Commit Bot
Comment 7
2019-07-16 12:46:38 PDT
Comment on
attachment 374227
[details]
Patch Clearing flags on attachment: 374227 Committed
r247490
: <
https://trac.webkit.org/changeset/247490
>
WebKit Commit Bot
Comment 8
2019-07-16 12:46:39 PDT
All reviewed patches have been landed. Closing bug.
mitz
Comment 9
2021-12-15 13:12:01 PST
***
Bug 191702
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug